# ot

./: CHANGELOG.md  README.md  SITE.md  pyproject.toml
.github/: custom-agent.md
.github/workflows/: build-and-release.yaml
src/ot/: cli.py
src/ot/commands/: __init__.py  doctor_cmd.py  done_cmd.py  edit_cmd.py  init_cmd.py  log_cmd.py  note_cmd.py  nudge_cmd.py  report_cmd.py  set_cmd.py  skip_cmd.py  today_cmd.py
src/ot/commands/config_cmd/: __init__.py  set_cmd.py  view_cmd.py
src/ot/services/: __init__.py  backup.py  doctor.py  storage.py
src/ot/utils/: __init__.py  cli.py  constants.py  errors.py  logger.py  models.py
tests/commands/: test_config_set_cmd.py  test_config_view_cmd.py  test_doctor_cmd.py  test_done_cmd.py  test_edit_cmd.py  test_init_cmd.py  test_log_cmd.py  test_note_cmd.py  test_nudge_cmd.py  test_report_cmd.py  test_set_cmd.py  test_skip_cmd.py  test_today_cmd.py
tests/services/: test_backup.py  test_doctor.py  test_storage.py
